--- a/src/main/resources/templates/detail-vente.html
+++ b/src/main/resources/templates/detail-vente.html
@@ -1,111 +1,106 @@
 
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" data-th-href="@{/css/main.css}">
-<link rel="stylesheet" data-th-href="@{/css/error.css}">
-<title>ENI Enchères - Détail</title>
-<link rel="icon" data-th-href="@{/images/logoEnchere.png}" />
+	<html lang="en" xmlns:th="http://www.thymeleaf.org">
+	<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" data-th-href="@{/css/main.css}">
+	<link rel="stylesheet" data-th-href="@{/css/error.css}">
+	<title>ENI Enchères - Détail</title>
+	<link rel="icon" data-th-href="@{/images/logoEnchere-1.png}" />
 
 </head>
 <body>
-
-	<section>
-
+<header xmlns:th="http://www.thymeleaf.org" data-th-fragment="frag-entete">
+	<nav>
+        <span>
+            <a href="/">
+                <img src="/images/LogoEnchere.png" alt="Logo">
+            </a>
+        </span>
 		<div>
-			<form th:action="@{/vente/detail}" th:object="${articleVendu}">
+			<a href="/">ENI Enchères</a>
+		</div>
+		<div id="navbarTogglerDemo02">
+			<ul>
+				<li><a aria-current="page" data-th-href="@{/}">Accueil</a></li>
+				<li th:if="${#authorization.expression('isAuthenticated()')}"><a data-th-href="@{/vente}">Ventes</a></li>
+				<li th:if="${!#authorization.expression('isAuthenticated()')}"><a data-th-href="@{/utilisateur/inscription}">Inscription</a></li>
+				<li th:if="${#authorization.expression('isAuthenticated()')}"><a data-th-href="@{/utilisateur/profil}">Profil</a></li>
+				<li th:if="${!#authorization.expression('isAuthenticated()')}"><a data-th-href="@{/login}">Connexion</a></li>
+				<li th:if="${#authorization.expression('isAuthenticated()')}"><a data-th-href="@{/logout}">Déconnexion</a></li>
+			</ul>
+		</div>
+	</nav>
+</header>
+<main class="center-main">
 
-			 <button type="button" aria-label="Close" onclick="window.location.href = '/';"></button>
 
-				<div >
-					<div >
-						<h2 >Détail de la vente</h2>
+	<form th:action="@{/vente/detail}" th:object="${articleVendu}" method="post">
+		<h3>Détail de l'article <span data-th-text="*{nomArticle}"></span></h3>
+		<div class="form-container">
 
-
-						<div>
-							<label for="article">Article</label>
-							<input readonly="readonly" type="text" data-th-field="*{nomArticle}" />
-						</div>
-
-
-						<div>
-							<label for="description">Description</label>
-							<input readonly="readonly" type="text" data-th-field="*{description}" />
-						</div>
-
-						<div>
-							<label for="description">Catégorie</label>
-							<input readonly="readonly" type="text" data-th-field="*{categorieArticle.libelle}" />
-						</div>
-
-						<div>
-							<label for="miseAPrix">Prix de départ</label>
-							<input readonly="readonly" type="text" data-th-field="*{miseAPrix}" />
-						</div>
-
-						<div>
-							<label for="dateDebut">Date de début </label>
-							<input readonly="readonly" type="text" data-th-field="*{dateDebutEnchere}" />
-						</div>
-
-						<div>
-							<label  for="dateFin">Date de fin</label>
-							<input readonly="readonly"  data-th-field="*{dateFinEnchere}" />
-						</div>
-
-						<div>
-							<label for="image">Image</label>
-							<img  data-th-src="@{/images/carton.jpg}">
-						</div>
-
-						<h2 >Lieu de retrait</h2>
-
-						<div>
-							<label for="rue">rue</label>
-							<input readonly="readonly" type="text" data-th-field="*{lieuRetrait.rue}" />
-						</div>
-
-						<div>
-							<label  for="codePostal">Code Postal</label>
-							<input readonly="readonly" type="text" data-th-field="*{lieuRetrait.codePostal}" />
-						</div>
-
-						<div>
-							<label for="ville">Ville</label>
-							<input readonly="readonly" type="text" data-th-field="*{lieuRetrait.ville}" />
-						</div>
-
-					</div>
-
-				</div>
-			</form>
-
-			<form th:action="@{/vente/enchere}" method="post" th:object="${articleVendu}">
-											<div >
-					<div >
-						<input type="hidden" th:field="*{noArticle}">
-
-				<div>
-					<label for="miseAPrix">Enchère</label>
-					<input type="number" name="montantEnchere" th:value="*{miseAPrix}" />
-				</div>
-
-				<div>
-					<label for="montantEnchere">Nouveau prix</label>
-					<input readonly="readonly" type="text" data-th-field="*{miseAPrix}"/>
-				</div>
-
-				<div>
-					<button type="submit">--Nouvelle offre--</button>
-				</div>
-				</div>
-				</div>
-			</form>
-
+			<div class="form-group">
+				<h5>Article : <span data-th-text="*{nomArticle}"></span></h5>
 			</div>
-	</section>
 
+			<div class="form-group">
+				<h5>Description : <span data-th-text="*{description}"></span></h5>
+			</div>
+
+			<div class="form-group">
+				<h5>Catégorie : <span data-th-text="*{categorieArticle.libelle}"></span></h5>
+			</div>
+
+			<div class="form-group">
+				<h5>Prix de départ : <span data-th-text="*{miseAPrix}"></span></h5>
+			</div>
+
+			<div class="form-group">
+				<h5>Date de début : <span data-th-text="*{dateDebutEnchere}"></span></h5>
+			</div>
+
+			<div class="form-group">
+				<h5>Date de fin : <span data-th-text="*{dateFinEnchere}"></span></h5>
+			</div>
+
+			<div class="form-group">
+				<h5>Lieu de retrait : <span data-th-text="*{lieuRetrait.rue}"></span>, <span data-th-text="*{lieuRetrait.codePostal}"></span> <span data-th-text="*{lieuRetrait.ville}"></span></h5>
+			</div>
+
+		</div>
+			<div class="form-group">
+				<label for="image">Image</label>
+				<img src="/images/carton.jpg" alt="Prévisualisation de l'image" class="resized-image">
+			</div>
+		</div>
+		</div>
+	</form>
+
+	<form th:action="@{/vente/enchere}" method="post" th:object="${articleVendu}">
+		<div class="form-container">
+			<input type="hidden" th:field="*{noArticle}" />
+			<div class="form-group">
+				<h5>Prix de vente : <span data-th-text="*{prixVente}"></span></h5>
+			</div>
+			<div class="form-group">
+				<h5>Nouveaux prix : <span data-th-text="*{miseAPrix}"></span></h5>
+			</div>
+
+			<div class="form-group">
+				<label for="montantEnchere">Montant de l'enchère</label>
+				<input type="number" name="montantEnchere" th:value="*{miseAPrix}" class="form-control" />
+			</div>
+
+			<div class="form-actions">
+				<button type="submit" class="btn btn-primary">Nouvelle Offre</button>
+			</div>
+		</div>
+	</form>
+</main>
+
+<footer class="footer">
+	<p>© 2024 ENI Enchères. Tous droits réservés.</p>
+</footer>
 </body>
 </html>
