--- a/src/main/resources/templates/detail-sale.html
+++ b/src/main/resources/templates/detail-sale.html
@@ -25,8 +25,8 @@
 			<ul>
 				<li><a aria-current="page" data-th-href="@{/}">Accueil</a></li>
 				<li th:if="${#authorization.expression('isAuthenticated()')}"><a data-th-href="@{/vente}">Ventes</a></li>
-				<li th:if="${!#authorization.expression('isAuthenticated()')}"><a data-th-href="@{/utilisateur/inscription}">Inscription</a></li>
-				<li th:if="${#authorization.expression('isAuthenticated()')}"><a data-th-href="@{/utilisateur/profil}">Profil</a></li>
+				<li th:if="${!#authorization.expression('isAuthenticated()')}"><a data-th-href="@{/user/inscription}">Inscription</a></li>
+				<li th:if="${#authorization.expression('isAuthenticated()')}"><a data-th-href="@{/user/profil}">Profil</a></li>
 				<li th:if="${!#authorization.expression('isAuthenticated()')}"><a data-th-href="@{/login}">Connexion</a></li>
 				<li th:if="${#authorization.expression('isAuthenticated()')}"><a data-th-href="@{/logout}">Déconnexion</a></li>
 			</ul>
@@ -36,7 +36,7 @@
 <main class="center-main">
 
 
-	<form th:action="@{/vente/detail}" th:object="${articleVendu}" method="post">
+	<form th:action="@{/vente/detail}" th:object="${itemSold}" method="post">
 		<h3>Détail de l'article <span data-th-text="*{nomArticle}"></span></h3>
 		<div class="form-container">
 
@@ -65,7 +65,7 @@
 			</div>
 
 			<div class="form-group">
-				<h5>Lieu de retrait : <span data-th-text="*{lieuRetrait.rue}"></span>, <span data-th-text="*{lieuRetrait.codePostal}"></span> <span data-th-text="*{lieuRetrait.ville}"></span></h5>
+				<h5>Lieu de pickUp : <span data-th-text="*{lieuPickUp.rue}"></span>, <span data-th-text="*{lieuPickUp.codePostal}"></span> <span data-th-text="*{lieuPickUp.ville}"></span></h5>
 			</div>
 
 		</div>
@@ -77,7 +77,7 @@
 		</div>
 	</form>
 
-	<form th:action="@{/vente/enchere}" method="post" th:object="${articleVendu}">
+	<form th:action="@{/vente/auctions}" method="post" th:object="${itemSold}">
 		<div class="form-container">
 			<input type="hidden" th:field="*{noArticle}" />
 			<div class="form-group">
