--- a/src/main/resources/templates/sell.html
+++ b/src/main/resources/templates/sell.html
@@ -23,8 +23,8 @@
 			<ul>
 				<li><a aria-current="page" data-th-href="@{/}">Accueil</a></li>
 				<li th:if="${#authorization.expression('isAuthenticated()')}"><a data-th-href="@{/vente}">Ventes</a></li>
-				<li th:if="${!#authorization.expression('isAuthenticated()')}"><a data-th-href="@{/utilisateur/inscription}">Inscription</a></li>
-				<li th:if="${#authorization.expression('isAuthenticated()')}"><a data-th-href="@{/utilisateur/profil}">Profil</a></li>
+				<li th:if="${!#authorization.expression('isAuthenticated()')}"><a data-th-href="@{/user/inscription}">Inscription</a></li>
+				<li th:if="${#authorization.expression('isAuthenticated()')}"><a data-th-href="@{/user/profil}">Profil</a></li>
 				<li th:if="${!#authorization.expression('isAuthenticated()')}"><a data-th-href="@{/login}">Connexion</a></li>
 				<li th:if="${#authorization.expression('isAuthenticated()')}"><a data-th-href="@{/logout}">Déconnexion</a></li>
 			</ul>
@@ -35,7 +35,7 @@
 <main class="center-main">
 	<h3>Nouvelle Vente</h3>
 	<p>Veuillez remplir les informations nécessaires pour proposer un nouvel article en vente.</p>
-	<form th:action="@{/vente}" method="post" th:object="${articleVendu}">
+	<form th:action="@{/vente}" method="post" th:object="${itemSold}">
 		<div class="form-container">
 			<div class="form-group">
 				<label for="article">Nom de l'article</label>
@@ -48,10 +48,10 @@
 			</div>
 
 			<div class="form-group">
-				<label for="categorie">Catégorie</label>
-				<select id="categorie" class="form-control" name="categorieArticle.noCategorie">
+				<label for="category">Catégorie</label>
+				<select id="category" class="form-control" name="categorieArticle.noCategorie">
 					<option value="0">Sélectionnez une catégorie</option>
-					<option data-th-each="categorie : ${listeCategorie}" th:value="${categorie.noCategorie}" th:text="${categorie.libelle}"></option>
+					<option data-th-each="category : ${listeCategorie}" th:value="${category.noCategorie}" th:text="${category.libelle}"></option>
 				</select>
 			</div>
 
@@ -71,21 +71,21 @@
 			</div>
 
 		</div>
-			<h4>Lieu de retrait</h4>
+			<h4>Lieu de pickUp</h4>
 			<div class="form-container">
 			<div class="form-group">
 				<label for="rue">Rue</label>
-				<input type="text" id="rue" class="form-control" name="lieuRetrait.rue" placeholder="Entrez la rue" />
+				<input type="text" id="rue" class="form-control" name="lieuPickUp.rue" placeholder="Entrez la rue" />
 			</div>
 
 			<div class="form-group">
 				<label for="codePostal">Code Postal</label>
-				<input type="text" id="codePostal" class="form-control" name="lieuRetrait.codePostal" placeholder="Entrez le code postal" />
+				<input type="text" id="codePostal" class="form-control" name="lieuPickUp.codePostal" placeholder="Entrez le code postal" />
 			</div>
 
 			<div class="form-group">
 				<label for="ville">Ville</label>
-				<input type="text" id="ville" class="form-control" name="lieuRetrait.ville" placeholder="Entrez la ville" />
+				<input type="text" id="ville" class="form-control" name="lieuPickUp.ville" placeholder="Entrez la ville" />
 			</div>
 		</div>
 		<div class="form-container">
